syntax = "proto3";

package pb_message;


enum mission_t {
    no_mission = 0;
    explore = 1;
    attack = 2;
    evade = 3;
    intercept = 4;
    convoy_guard = 5;
    ground_attack = 6;
    privateer = 7;
    found_coloy = 8;
    expand_colony = 9;

    // Lifters only from here down.
    deliver_armies = 64;
    deliver_repair_yard = 65;
    deliver_mobile_base = 66;
    build_outpost = 67;
    build_starbase = 68;
    upgrade_base = 69;
}

message hex_coord_t
{
    int32 x = 1;
    int32 y = 2;
}
